# lcc-ecommerce-api

./: .gitignore  README.adoc  app.py  crud.py  db.py  endpoints.py  models.py  pyproject.toml
sample_data/: categories.csv  product_categories.csv  products.csv
